--- a/Assets/Frontend/css/style.css
+++ b/Assets/Frontend/css/style.css
@@ -14,6 +14,9 @@
   -webkit-appearance: none;
   width: 3px;
 }
+p,div{
+  font-weight: 400 !important;
+}
 
 ::-webkit-scrollbar-thumb {
   border-radius: 4px;
