--- a/Assets/Frontend/css/style.css
+++ b/Assets/Frontend/css/style.css
@@ -23,7 +23,29 @@ p,div{
   background-color: rgba(0, 0, 0, .5);
   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
-
+.blog_title1{
+  margin-bottom: 0px;
+  text-align: center;
+}
+.blog_title1 .post_date{
+  margin: 0px;
+}
+.blog_title1 .categor11{
+  margin: 5px 0px 0px 0px;
+  color: red;
+  font-size: 15px;
+}
+.blog_title1 h2{
+  font-size: 15px;
+  margin: 0px 0px 7px 0px;
+  text-transform: uppercase;
+  line-height: 17px;
+  overflow: hidden;
+  display: -webkit-box;
+  width: 96%;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
 *, *::after, *::before {
   box-sizing: border-box;
 }
